some text refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1213,7 +1213,7 @@ side effects in the category. I.e. the functions are
 
 
 In any case we can construct a simple toy category that can be easy
-implemented in any language. Particularly we will look into category
+implemented in any language. Particularly we shall look into category
 with 3 \mynameref{def:object}s that are types: \textbf{Int}, \textbf{Bool},
 \textbf{String}. There are also several \mynameref{def:morphism}s
 (functions) between them (see \cref{fig:pl_example}).    
@@ -1294,7 +1294,7 @@ with 3 \mynameref{def:object}s that are types: \textbf{Int}, \textbf{Bool},
   \index{Object!$\cat{Scala}$ example}
   \index{Morphism!$\cat{Scala}$ example}
 
-  We will use the same trick as in \mynameref{ex:haskcategory} and
+  we shall use the same trick as in \mynameref{ex:haskcategory} and
   will assume 
   types in Scala as \mynameref{def:object}s, 
   functions as \mynameref{def:morphism}s.
@@ -1341,10 +1341,10 @@ with 3 \mynameref{def:object}s that are types: \textbf{Int}, \textbf{Bool},
   \label{ex:cppcategory}
   \index{Object!$\cat{C\texttt{++}}$ example}
   \index{Morphism!$\cat{C\texttt{++}}$ example}
-  We will use the same trick as in \mynameref{ex:haskcategory} and
+  we shall use the same trick as in \mynameref{ex:haskcategory} and
   will assume 
   types in C\texttt{++} as \mynameref{def:object}s, 
-  functions as \mynameref{def:morphism}s. We will implement
+  functions as \mynameref{def:morphism}s. we shall implement
   \mynameref{def:category} from \cref{fig:pl_example}.
 
 
@@ -1402,9 +1402,9 @@ of the $\cat{Set}$ category does.
   \label{def:relcategory}
   \index{Object!$\cat{Rel}$ category}
   \index{Morphism!$\cat{Rel}$ category}
-  We will consider a set of sets (same as \mynameref{def:setcategory})
+  we shall consider a set of sets (same as \mynameref{def:setcategory})
   i.e. \mynameref{def:set}s as \mynameref{def:object}s. Instead of
-  \mynameref{def:function}s we will use \mynameref{def:binary_relation}s as
+  \mynameref{def:function}s we shall use \mynameref{def:binary_relation}s as
   \mynameref{def:morphism}s. 
 
   The $\cat{Rel}$ category is similar to the finite dimensional
@@ -1415,7 +1415,7 @@ of the $\cat{Set}$ category does.
   mapped to a subset $Y' \subset Y$. The $Y'$ can be
   \mynameref{def:singleton_set}  (in this case no differences with
   \mynameref{def:setcategory}) but there can be a situation when $Y'$
-  consists of several elements. In the case we will get some kind of
+  consists of several elements. In the case we shall get some kind of
   superposition that is analogiest to quantum systems.
 \end{definition}
 
@@ -1430,8 +1430,8 @@ numbers $\mathbb{C}$.
   \mynameref{def:vectorspace} with an inner product as a complex
   number ($\mathbb{C}$). 
 
-  Later we will consider only finite dimensional Hilber spaces.
-  We will denote a Hilbert space of dimensional $n$ as
+  Later we shall consider only finite dimensional Hilber spaces.
+  we shall denote a Hilbert space of dimensional $n$ as
   $\mathcal{H}_n$. Obviously $\mathcal{H}_1 = \mathbb{C}$.
 \end{definition}
 
@@ -1758,13 +1758,13 @@ in water that leads to well known Snell's law \cite{wiki:snellslaw}:
 \]
 
 \subsubsection{Classical mechanics}
-We will consider a motion of a classical mechanical system there. The
+we shall consider a motion of a classical mechanical system there. The
 system consists of $n$ particles. Each particle with number $i \in {1,
   \dots, n}$ has coordinate $q_i \in \mathbb{R}^3$ that changes with
 time. The set ${q_1(t), \dots, q_n(t)}$ defines the trajectory.
 \index{Lagrangian}
 Equations of classical mechanics, that define the trajectory, can be
-written in different forms. We will 
+written in different forms. we shall 
 consider Lagrangian form and least action form there. The key point
 for both is \textit{Lagrangian} that can be
 written \footnote{non-relativistic case} 
@@ -1918,7 +1918,7 @@ K(a,b) = \frac{1}{Z} \int_{\bf q} e^{\frac{i}{\hbar}S({\bf q})} \mathcal{D}{\bf 
 where ${\bf q}$ is a trajectory from $a$ to $b$ (see
 \cref{fig:pathintegral}), and $S$ is the action 
 defined by \eqref{eq:action}. For a path $x$ such that $\delta S({\bf q}) >
-\hbar$ we will have that a trajectory ${\bf q} + \delta {\bf q}$ that is similar
+\hbar$ we shall have that a trajectory ${\bf q} + \delta {\bf q}$ that is similar
 to ${\bf q}$ but gives a completely different action and as result such
 trajectories will cancel each other.   
 
