--- a/functors.tex
+++ b/functors.tex
@@ -12,7 +12,7 @@
   \item $\forall a_C \in \catob{C}, \exists a_D \in \catob{D}$ such that
     $a_D = F( a_C )$
   \item $\forall f_C \in \cathom{C}, \exists f_D \in \cathom{D}$ such
-    that $\dom f_D = F (\dom f_C), \cod f_D = F (\cod f_C)$. We will use
+    that $\dom f_D = F (\dom f_C), \cod f_D = F (\cod f_C)$. We shall use
     the following notation later: $f_D = F(f_C)$.
   \item $\forall f_C, g_C$ the following equation holds: 
     \[
