--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@ subject mostly consists of a lot of definitions that are related each
 others. We wrote the book to collect all the definitions in one
 place to be easy checked and updated in future when we decide to refresh
 our knowledge about the field of math. Therefore the book was written mostly
-for our category theory studying purposes but we will appreciate if
+for our category theory studying purposes but we shall appreciate if
 somebody else find it useful. 
 
 The topics(chapters) cover base definitions
