--- a/monads.tex
+++ b/monads.tex
@@ -2,7 +2,7 @@
 \chapter{Monads}
 
 Monads are very important for pure functional programming languages
-such as Haskell. We will start with \mynameref{def:monoid}
+such as Haskell. we shall start with \mynameref{def:monoid}
 consideration, continue with the formal mathematical definition for
 monad and
 will finish with programming languages examples later.
@@ -15,12 +15,12 @@ in the terms of internal structure i.e. the ordinary and not
 Now we are going to consider \mynameref{def:monoid} in the terms of
 \mynameref{def:set} theory but 
 will try to give the definition that is based rather on morphisms then
-on internal set structure i.e. we will use
+on internal set structure i.e. we shall use
 \mynameref{def:categorical_approach}. Let $M$ is a set and by the
 monoid 
 definition (\cref{def:monoid})
 $\forall m_1, m_2 \in M$ we can define a new element of the set
-$\mu(m_1, m_2) \in M$. Later we will use the following notation for
+$\mu(m_1, m_2) \in M$. Later we shall use the following notation for
 the $\mu$:
 \[
 \mu(m_1, m_2) \equiv m_1 \cdot m_2.
@@ -433,7 +433,7 @@ associator, left and right unitors are all identity morphisms i.e.
 \label{rem:monoidal_product}
 The monoidal product is a binary operation that specifies the exact
 monoidal structure. Often it is called as \textit{tensor product} but
-we will avoid the naming because it is not always the same as the
+we shall avoid the naming because it is not always the same as the
 \mynameref{def:tensor_product} introduced for
 \mynameref{def:hilbert_space}s. We also note that the monoidal product is
 a \mynameref{def:bifunctor}. 
@@ -523,13 +523,13 @@ where $\mathcal{A}^\ast$ - \mynameref{def:dual_space}.
 
 The \mynameref{def:funcategory} is an example of a category. We can
 apply additional limitation and consider only
-\mynameref{def:endofunctor}s i.e. we will look at the category
+\mynameref{def:endofunctor}s i.e. we shall look at the category
 $[\cat{C}, \cat{C}]$ - the category of functors from category $\cat{C}$ to
 the same category. One of the most popular math definition of a monad
 is the following: 
 ``All told, a monad in X is just a monoid in the category of
 endofunctors of X''\cite[p.~138]{bib:maclane98}.
-Later we will give an explanation for that one.
+Later we shall give an explanation for that one.
 
 We start with the formal definition of category of endofunctors and a
 tensor product in the category
