--- a/monoidalobject.tex
+++ b/monoidalobject.tex
@@ -8,7 +8,7 @@ Lets consider \mynameref{def:monoid} in the terms of Set theory and
 will try to give the definition that is based rather on morphisms then
 on internal set structure. Consider a set $M$ and by the definition
 $\forall m_1, m_2 \in M$ we can define a new element of the set
-$\mu(m_1, m_2) \in M$. Later we will use the following notation for
+$\mu(m_1, m_2) \in M$. Later we shall use the following notation for
 the $\mu$:
 \[
 \mu(m_1, m_2) \equiv m_1 \cdot m_2.
@@ -48,7 +48,7 @@ $\idm{M} \times \mu$ on $A$:
 \left(x, y \cdot z\right) \in M \times M
 \]
 i.e. $\idm{M} \times \mu: M \times \left( M \times M \right) \to M
-\times M$. If we act $\mu$ on the result we will get:
+\times M$. If we act $\mu$ on the result we shall get:
 \begin{eqnarray}
 \mu \left(\idm{M} \times \mu \left(x,\left(y,z\right)\right)\right) = 
 \left(\idm{M}(x),\mu\left(y,z\right)\right) = 
