--- a/nt.tex
+++ b/nt.tex
@@ -300,7 +300,7 @@ composition of natural transformations $\alpha, \beta$ as
 
 
 The natural transformation is not just object mapping but also
-morphism mapping. We will require that all morphisms shown on
+morphism mapping. We shall require that all morphisms shown on
 \cref{fig:nt_morphism_mapping_composition} commute. 
 The composition 
 defined in such way is called \mynameref{def:vertical_composition}.  
