--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -359,7 +359,7 @@ makes the diagram commute (see \cref{fig:product_of_morphisms}).
 
 \subsection{Sum}
 
-If we invert \mynameref{def:arrow}s in \mynameref{def:product} we will
+If we invert \mynameref{def:arrow}s in \mynameref{def:product} we shall
 got another 
 object definition that is called sum
 
@@ -432,7 +432,7 @@ The categorical sum is also called as \textit{coproduct}.
 \end{example}
 
 \begin{remark}[Sum sign]
-In the book we will use $\oplus$ as the sign for the categorical
+In the book we shall use $\oplus$ as the sign for the categorical
 \mynameref{def:sum}. The \mynameref{def:disjoint_union} sign $\sqcup$
 is also used
 \footnote{but not in the book} as the sign for categorical sum
@@ -444,7 +444,7 @@ is also used
 Consider the following definition from abstract algebra
 \begin{definition}[Monoid]
   \label{def:monoid}
-  The set of elements $M$ with defined binary operation $\circ$ we will call
+  The set of elements $M$ with defined binary operation $\circ$ we shall call
   as a monoid if the following conditions are satisfied.
   \begin{enumerate}
   \item Closure: $\forall a, b \in M$: $a \circ b \in M$
@@ -496,7 +496,7 @@ instance Monoid [a] where
 \begin{remark}[Monoid]
 The given definition of monoid is based on its internal structure i.
 e. there is a \mynameref{def:non_categorical_approach}. In
-\cref{ch:monoid_categorically}  we will continue the 
+\cref{ch:monoid_categorically}  we shall continue the 
 \mynameref{def:monoid} concept investigation and will give a
 \mynameref{def:categorical_approach} of the concept. You can also find
 there 
@@ -570,7 +570,7 @@ category and $a, b \in \catob{C}$
 then the \mynameref{def:homset} $\catmset{a}{b} \in \catob{Set}$ but
 we now want to construct something like to the \mynameref{def:homset}
 but that is an object in $\cat{C}$. This will be called as the
-function object. We will use the universal construction
+function object. we shall use the universal construction
 (\mynameref{def:universalproperty}) for the object definition. 
 
 \begin{definition}[Exponential]
@@ -712,7 +712,7 @@ $X$. I.e. $\left|X^Y\right| = 1$ that correlates with
 \end{remark}
 
 \subsection{Currying in $\cat{Set}$}
-In the section we will be in the \mynameref{def:setcategory}. 
+In the section we shall be in the \mynameref{def:setcategory}. 
 The definition of \mynameref{def:exponential} object is closely
 related to notion of currying that is defined for \mynameref{def:set}s
 as follows. 
@@ -1073,14 +1073,14 @@ TBD
 \section{Quantum mechanics}
 \begin{example}[Initial object][$\cat{FdHilb}$]
 \label{ex:quant_initial_object}
-We will use a Hilber space of dimensional 0 as the
+we shall use a Hilber space of dimensional 0 as the
 \mynameref{def:initial_object}. I.e. the set that does not have any
 states in it.
 \end{example}
 
 \begin{example}[Terminal object][$\cat{FdHilb}$]
   \label{ex:quant_terminal_object}
-We will use a Hilber space of dimensional 1 as the
+we shall use a Hilber space of dimensional 1 as the
 \mynameref{def:terminal_object}. I.e. the set of complex numbers
 $\mathbb{C}$.   
 \end{example}
