--- a/yoneda.tex
+++ b/yoneda.tex
@@ -1,11 +1,11 @@
 %% -*- coding:utf-8 -*-
 \chapter{Yoneda's lemma}
 \label{sec:yoneda}
-Yoneda lemma is a fact about so called Hom functors. We will start
+Yoneda lemma is a fact about so called Hom functors. we shall start
 with the definition and examples for both
 \mynameref{def:cov_hom_functor} and \mynameref{def:con_hom_functor}. The
 definition and examples for Yoneda lemma will be provided after that. 
-In the chapter we will assume that the category $\cat{C}$ to be a
+In the chapter we shall assume that the category $\cat{C}$ to be a
 \mynameref{def:localy_small_category}.
 
 \section{Hom functors}
@@ -437,7 +437,7 @@ is a \mynameref{def:ni}.
 
 \begin{example}[Representable functor][$\cat{Hask}$]
 \label{ex:representable_functor_hask}
-Consider a \mynameref{def:representable_functor} $F$. We will mark it as a small
+Consider a \mynameref{def:representable_functor} $F$. we shall mark it as a small
 letter \textbf{f} in the example. 
 \footnote{There is a requirement from Haskell to use small but not
   capital letter for it.}
