some text refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -144,10 +144,10 @@ considered as the same \mynameref{def:morphism}s.
 \end{figure}
 
 \mynameref{def:morphism}s have several properties. \footnote{The
-  properties don't have any proof and postulated as axioms}
+  properties don't have any proofs and are postulated as axioms}
 \begin{axiom}[Composition]
   \label{axm:composition}
-  If we have 3 \mynameref{def:object}s $a, b, c$ and 2
+  If there are 3 \mynameref{def:object}s $a, b, c$ and 2
   \mynameref{def:morphism}s 
   \begin{eqnarray}
   f_{ab} : a \rightarrow b,
@@ -192,7 +192,7 @@ considered as the same \mynameref{def:morphism}s.
 
 \begin{definition}[Identity morphism]
   \label{def:id}
-  For every \mynameref{def:object} $a$ we define a special
+  For every \mynameref{def:object} $a$ there is a special
   \mynameref{def:morphism} $\idm{a} : a \rightarrow a$ with the
   following properties: $\forall f_{ba} : b \rightarrow a$ (see \cref{fig:left_idm})
   \begin{equation}
