--- a/introduction.tex
+++ b/introduction.tex
@@ -23,7 +23,7 @@ There are a lot of examples in each chapter. The examples cover
 different category 
 theory application areas. We assume that the reader is familiar with
 the corresponding area and the example(s) can be passed if not. I.e.
-anyone can choose suitable example(s) for him/her. 
+anyone can choose suitable example(s) for they.
 
 The most important examples are related to the set theory. The set
 theory and category theory are very close related. Each one can be
