some text refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -225,7 +225,7 @@ Note that \mynameref{def:id} is unique, see
     \draw[->] (a) to [out=45,in=135,looseness=20] node[above] {$\idm{a}$} (a);
 
   \end{tikzpicture}
-  \caption{Identity morphism: $\idm{a} \circ f_{ba} = f_{ba}$}
+  \caption{Identity morphism property: $\idm{a} \circ f_{ba} = f_{ba}$}
   \label{fig:left_idm}
 \end{figure}
 
@@ -244,7 +244,7 @@ Note that \mynameref{def:id} is unique, see
     \draw[->] (a) to [out=45,in=135,looseness=20] node[above] {$\idm{a}$} (a);
 
   \end{tikzpicture}
-  \caption{Identity morphism: $f_{ab} \circ \idm{a}  = f_{ab}$}
+  \caption{Identity morphism property: $f_{ab} \circ \idm{a}  = f_{ab}$}
   \label{fig:right_idm}
 \end{figure}
 
