some text refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -253,7 +253,7 @@ Note that \mynameref{def:id} is unique, see
   \label{def:diagram}
   A \textit{diagram} in a category $\cat{C}$ is a collection of
   vertices and directed edges where the vertices correspond to the
-  category $\cat{C}$ objects and edges consistently correspond to the
+  objects of $\cat{C}$ and edges consistently correspond to the
   morphisms (see \ref{fig:diagramm}).
 
   \begin{figure}[H]
