some text refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -277,7 +277,7 @@ Note that \mynameref{def:id} is unique, see
 
   
   Consistently means that for an edge named as $f$ has endpoints
-  labeled $a$ and $b$. Where $f$ is a morphism of $\cat{C}$, $a$ is \mynameref{def:domain} of $f$ and
+  labeled $a$ and $b$, where $f$ is a morphism of $\cat{C}$, $a$ is \mynameref{def:domain} of $f$ and
   $b$ is \mynameref{def:codomain} of $f$. 
 \end{definition}
 
