some text refactoring

--- a/introduction.tex
+++ b/introduction.tex
@@ -39,7 +39,7 @@ examples (Haskell, C\texttt{++}, Scala) can be found on github repositories:
 \end{itemize}
 
 The examples from physics are related to quantum mechanics that is the
-most known for us. For the examples we were inspired by the Bob Coecke
+most known to us. For the examples we were inspired by the Bob Coecke
 article \cite{bib:arxiv:Bob_Coecke_2008}.
 
 There is also additional material related to abstract algebra (see
