Short description was added for Definitions chapter

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -3,6 +3,12 @@
 
 \section{Definitions}
 
+The chapter provides you with base definitions that will be widely used in the
+book later.
+We will give you definition for \mynameref{def:object}, \mynameref{def:morphism},
+\mynameref{def:category} and also provide you several important exaxmples,
+such as the \mynameref{def:setcategory}.
+
 \subsection{Object}
 
 \begin{definition}[Class]
