bibstyle was changed to ieeeetr

--- a/cattheory.tex
+++ b/cattheory.tex
@@ -385,7 +385,7 @@
 \input ./appendices.tex
 
 \printindex
-\bibliographystyle{gost780s}
+\bibliographystyle{ieeetr}
 \bibliography{cattheory}
 \input ./license.tex
 
