--- a/monads.tex
+++ b/monads.tex
@@ -2,7 +2,7 @@
 \chapter{Monads}
 
 Monads are very important for pure functional programming languages
-such as Haskell. we shall start with \mynameref{def:monoid}
+such as Haskell. We shall start with \mynameref{def:monoid}
 consideration, continue with the formal mathematical definition for
 monad and
 will finish with programming languages examples later.
