bibstyle was changed to acm

--- a/cattheory.bib
+++ b/cattheory.bib
@@ -582,13 +582,13 @@
    note = "[Online; accessed 5-February-2017]"
  }
 
-@MISC {mathstackexchange:discriminant3,
-    TITLE = {Using Vieta's theorem for cubic equations to derive the cubic discriminant},
-    AUTHOR = {Qiaochu Yuan},
-    HOWPUBLISHED = {Mathematics Stack Exchange},
-    NOTE = {URL:http://math.stackexchange.com/q/103504 (version: 2012-01-29)},
-    EPRINT = {http://math.stackexchange.com/q/103504},
-    URL = {http://math.stackexchange.com/q/103504}
+@misc {mathstackexchange:discriminant3,
+    title = {Using Vieta's theorem for cubic equations to derive the cubic discriminant},
+    author = {Qiaochu Yuan},
+    publisher = {Mathematics Stack Exchange},
+    note = {URL:http://math.stackexchange.com/q/103504 (version: 2012-01-29)},
+    eprint = {http://math.stackexchange.com/q/103504},
+    url = {http://math.stackexchange.com/q/103504}
 }
 
  @misc{ wiki:klein4group,
