--- a/cattheory.tex
+++ b/cattheory.tex
@@ -385,7 +385,7 @@
 \input ./appendices.tex
 
 \printindex
-\bibliographystyle{ieeetr}
+\bibliographystyle{acm}
 \bibliography{cattheory}
 \input ./license.tex
 
