Minor fixes at intro

--- a/introduction.tex
+++ b/introduction.tex
@@ -5,7 +5,7 @@ You just looked at yet another introduction to Category Theory. The
 subject mostly consists of a lot of definitions that are related each
 others. We wrote the book to collect all the definitions in one
 place to be easy checked and updated in future when we decide to refresh
-our knowledge about the field of math. Therefore the book was written mostly
+our knowledge about the field of math. Thus the book was written mostly
 for our category theory studying purposes but we shall appreciate if
 somebody else find it useful. 
 
@@ -29,7 +29,7 @@ The most important examples are related to the set theory. The set
 theory and category theory are very close related. Each one can be
 considered as an alternative view to another one.
 
-There are also a lot of examples from programming languages which include
+There are also several examples from programming languages which include
 Haskell, Scala, C\texttt{++}. The source files for programming languages 
 examples (Haskell, C\texttt{++}, Scala) can be found on github repositories:
 \begin{itemize}
